change error status alternatives to 409, return quiz and the docs
